--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="F:/UNI/basi x oo/TestPostgresql/src/lib/postgresql-42.2.8.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="src/postgresql-42.2.8.jar"/>
+	<classpathentry kind="output" path="lib"/>
 </classpath>
